# actions

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  action.yml  pyproject.toml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: publish-multi.yml  publish.yml  release.yml  semver.yml  site.yml  test.yml
docs/site/: index.html
docs/specs/: 2026-05-01-integration-test-harness.md
plan/: action.yml  plan.py  runtime-tag.jq
prep-bundle/: action.yml
publish/: action.yml  gen_flatpakrefs.py  index.html  merge_index.py  reconcile.py  records.py  signing.py
publish-oci/: action.yml
publish-site/: action.yml
shared/: resolve-channel.sh
tests/: conftest.py  mock_repo.sh  test_gen_flatpakrefs.py  test_harness.py  test_merge_index.py  test_plan.py  test_reconcile.py  test_records.py  test_resolve_channel.py  test_runtime_tag.sh  test_signing.py
